# mustmatch

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  MUSTMATCH-MERGE-SPEC.md  Makefile  OUTPUT_REDESIGN.md  README.md  REDESIGN.md  REFACTOR.md  doctest_expect.py  example.md  pyproject.toml  refactor-plan.md
.github/workflows/: release.yml  test.yml
.march/: code-log.md  code-review-log.md  validation-profiles.toml  verify-log.md
bench/: clibench-commands.txt
crates/mustmatch-cli/: Cargo.toml
crates/mustmatch-cli/src/: main.rs
crates/mustmatch-core/: Cargo.toml
crates/mustmatch-core/src/: coercion.rs  comparator.rs  fixture.rs  lib.rs  normalizer.rs  parser.rs
crates/mustmatch-python/: Cargo.toml
crates/mustmatch-python/src/: lib.rs
docs/: 01-overview.md  02-cli-assertions.md  03-executable-documents.md  04-fixtures-and-tables.md  05-directives.md  06-comparison-modes.md  07-normalization.md  08-configuration.md  09-examples.md  10-verify-matrix.md  11-lint.md  12-named-runs.md  13-standalone-doc-runner.md  14-good-executable-docs.md  README.md  api.md  cli.md  comparison-modes.md  conventions.md  each-row.md  error-handling.md  examples.md  fixture.md  getting-started.md  guide.md  index.md  json-subset.md  json.md  jsonl.md  matching.md  mdtest.md  myproject-readme.md  normalization.md  preprocessing.md  pytest-plugin.md  python.md  quick-start.md  test-doc.md  usage.md  writing-test-documents.md
docs/cli/: exec.md  match.md  reference.md
docs/comparator/: detect.md  json.md
docs/examples/: intro.md
docs/philosophy/: why-test-documentation.md
docs/recipes/: json-testing.md
docs/reference/: cli-reference.md  test-results.txt
docs/runner/: python.md
docs/tests/: cli.md  contains.md  errors.md  exact.md  files.md  json.md  jsonl.md  matching.md  mdtest.md  normalize.md  output.md  preprocessing.md  pytest-plugin.md  regex.md  transform.md  version.md
docs/tests/cli/: exec.md  match.md
docs/tests/comparator/: contains.md  jsonl.md
docs/use-cases/: ci-integration.md  devops-verification.md  document-driven-development.md
old_docs/: REDESIGN.md
old_docs/cli/: match.md
old_docs/comparator/: exact.md  regex.md
old_docs/docs2/: fixture.md  jsonl.md
old_docs/normalizer/: json.md  strip-ansi.md  trim.md
old_docs/parser/: blocks.md  tables.md
old_docs/runner/: bash.md
spec/: pytest-plugin.md  refactor.md  test-command.md
spec/roadmap/: REVIEW-AND-ROADMAP.md
src/doctest_expect/: __init__.py  __main__.py  cli.py  compare.py  config.py  version.py
src/mustmatch/: __init__.py  cli.py  compare.py  config.py  detect.py  doc_runner.py  exec.py  mdtest.py  normalize.py  output.py  parsing.py  pytest.py  pytest_plugin.py  python_exec.py  runtime.py
src/mustmatch/services/: __init__.py  comparator.py  fixture.py  normalizer.py  parser.py  runner.py
src/outmatch/: __init__.py  __main__.py  cli.py  config.py  exec.py  json_utils.py  mdtest.py  normalize.py  output.py  parsing.py  pytest.py  pytest_plugin.py  test_cmd.py  version.py
src/outmatchall/: __init__.py  __main__.py  cli.py  config.py  version.py
tests/: conftest.py  test_coverage.py  test_doc_runner.py  test_docs.py  test_expect.py  test_mdtest.py  test_pytest_plugin.py  test_test_cmd.py  test_uncoverables.py
