[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outmatch"
version = "0.2.0"
description = "CLI output assertion tool for documentation testing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BotAssembly", email = "hello@botassembly.com"}
]
keywords = ["testing", "documentation", "cli", "assertions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/botassembly/outmatch"
Repository = "https://github.com/botassembly/outmatch"

[project.scripts]
outmatch = "outmatch.cli:cli"

[project.entry-points."pytest11"]
outmatch = "outmatch.pytest_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src/outmatch"]
branch = true
parallel = true
omit = ["src/outmatch/__main__.py", "src/outmatch/config.py", "src/outmatch/version.py"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
