[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "mustmatch"
version = "0.0.4"
description = "CLI output assertion tool for documentation testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ian Maurer", email = "ian@genomoncology.com" },
]
keywords = ["testing", "documentation", "cli", "assertions"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/genomoncology/mustmatch"
Repository = "https://github.com/genomoncology/mustmatch"

[project.scripts]
mustmatch = "mustmatch.cli:cli"

[project.entry-points."pytest11"]
mustmatch = "mustmatch.pytest_plugin"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
]

[tool.maturin]
manifest-path = "crates/mustmatch-python/Cargo.toml"
module-name = "mustmatch._core"
python-source = "src"

[tool.mustmatch]
auto_imports = []

[tool.pytest.ini_options]
testpaths = ["docs"]
pythonpath = ["src"]
python_files = []
python_classes = []
python_functions = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["mustmatch"]
branch = true
parallel = true
omit = [
  "*/src/mustmatch/__main__.py",
  "*/src/mustmatch/version.py",
  "*/src/mustmatch/pytest_plugin.py",
  "*/src/mustmatch/cli.py",
]

[tool.coverage.report]
fail_under = 45
omit = [
  "*/src/mustmatch/__main__.py",
  "*/src/mustmatch/version.py",
  "*/src/mustmatch/pytest_plugin.py",
  "*/src/mustmatch/cli.py",
]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
