[package]
name = "mustmatch-python"
version = "0.0.2"
edition = "2024"
license = "MIT"

[lib]
name = "mustmatch_python"
crate-type = ["cdylib"]

[dependencies]
mustmatch-core = { path = "../mustmatch-core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
